--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body>
+
+    <style>
+      #password-form {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #f0f0f0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+      }
+      #password-form input[type="password"] {
+        padding: 10px;
+        font-size: 16px;
+        margin-bottom: 10px;
+      }
+      #password-form button {
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+      }
+    </style>
+    <div id="password-form">
+      <h2>Introduce la contraseña para acceder</h2>
+      <input type="password" id="password-input" placeholder="Contraseña">
+      <button onclick="checkPassword()">Acceder</button>
+      <p id="error-message" style="color: red;"></p>
+    </div>
+
+    <script>
+      function checkPassword() {
+        const password = document.getElementById('password-input').value;
+        const correctPassword = "Token2025"; // La contraseña es "Token2025"
+        const errorMessage = document.getElementById('error-message');
+
+        if (password === correctPassword) {
+          document.getElementById('password-form').style.display = 'none';
+        } else {
+          errorMessage.textContent = "Contraseña incorrecta. Inténtalo de nuevo.";
+        }
+      }
+    </script>
     <div id="root"></div>
-  </body>
+  </body>
 </html>
